--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -352,4 +352,9 @@ table td {
     background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.1) 20%, rgba(215, 187, 212, 1.93) 100%), url(/assets/img/oddsbannerone.png);
     min-height: 450px;
   }
-
+.bg-login{
+  background-image: url(/assets/img/live-action.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
