--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,9 @@ html {
       padding-left: 3rem !important;
       padding-right: 3rem !important;
   }
+  .bg-trams-resp{
+    background-color: transparent!important;
+  }
 }
 
 
@@ -617,6 +620,7 @@ margin-left: 0;
   margin-left: 0;
 }
 
+
 #page-content-wrapper {
   min-width: 0;
   width: 100%;
@@ -652,4 +656,6 @@ padding-right: 5px!important;
   text-align: left;
 }         
 
+
 }
+
