--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -411,6 +411,7 @@ table td {
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
+  min-height: 100vh;
 }
 .resize-ic{
   width: 100px!important;
@@ -569,6 +570,7 @@ a[data-toggle="collapse"] {
     background-position: center center;
     background-repeat: no-repeat;
     min-height: 100%;
+    min-height: 100vh;
 }  
 
 
