--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,10 +330,16 @@ table td {
   /*  End Toggle Switch  */
 
 .ic-msize{
-  width: 20px;
+  width: 15px;
   display: inline-block;
   margin-right: 5px;
 }
+
+.ic-msize25{
+  width: 20px;
+  display: inline-block;
+}
+
 /* container checkbox*/
 .container-checkbox {
     display: block;
@@ -418,8 +424,9 @@ table td {
   min-height: 100vh;
 }
 .resize-ic{
-  width: 100px!important;
-  margin: auto;
+  width: 70px!important;
+  margin: 50% auto 0% auto;
+  border-radius: 5px;
 }    
 .adslide .slick-slide img{
  border-radius: 0px 0px 5px 5px!important;
