--- a/assets/css/slick-theme.css
+++ b/assets/css/slick-theme.css
@@ -212,3 +212,31 @@
     opacity: .75;
     color: black;
 }
+
+/*Login slide*/
+.loginslide .slick-dots li button:before
+{
+    font-family: 'slick';
+    font-size: 12px;
+    line-height: 20px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 40px;
+    height: 40px;
+opacity:1;
+    content: '•';
+    text-align: center;
+padding: 20px;
+    color: #ffffff;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.loginslide .slick-dots li.slick-active button:before
+{
+    color: #f7ef22;
+}
+
