--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -347,11 +347,11 @@ table td {
 }
 
 .ic-msize25{
-  width: 20px;
+  width: 25px;
   display: inline-block;
 }
 .ic-msize255{
-  width: 25px;
+  width: 30px;
   display: inline-block;
 }
 
@@ -718,8 +718,13 @@ padding-right: 5px!important;
   margin-left: 0!important;
   margin-right: 0!important;
 }
+.pt-2-resp-m{
+  padding-top: 0.5rem;
+}
 @media (max-width: 767.98px) {
-
+  .pt-2-resp-m{
+    padding-top: 0rem!important;
+  }
 .img-logo-mobile{
   width: 90%;
   margin-bottom: 10px;
