--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,7 +238,7 @@ table td {
       font-size: 0.9em;
       width: 100%;
       left: 15%;
-      top: -1px;
+      top: px;
       opacity: 0;
     }
     .toggleSwitch a {
@@ -269,8 +269,8 @@ table td {
       width: 100%;
       height: 100%;
       position: absolute;
-      left: 50px;
-      top: -2px;
+      left: 51px;
+      top: -1px;
       background-color: #fafafa;
       border: 1px solid #ccc;
       border-radius: 30px;
@@ -339,7 +339,13 @@ table td {
   
   
   /*  End Toggle Switch  */
-
+.p-y-1-5{
+  padding-bottom: 0.3rem !important;
+  padding-top: .3rem!important;
+}
+.ft-15{
+  font-size: 15px!important;
+}
 .ic-msize{
   width: 15px;
   display: inline-block;
@@ -347,11 +353,11 @@ table td {
 }
 
 .ic-msize25{
-  width: 25px;
+  width: 20px;
   display: inline-block;
 }
 .ic-msize255{
-  width: 30px;
+  width: 25px;
   display: inline-block;
 }
 
