--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -625,7 +625,7 @@ a[data-toggle="collapse"] {
 
 
 .bg-signup{
-/*  background-image:url('/assets/img/bg-signup.png');*/
+  background-image:url('/assets/img/bg-signup.png');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
