--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 html {
   font-family: 'Noto Sans', sans-serif;
   line-height: 1.5
@@ -608,10 +609,12 @@ a[data-toggle="collapse"] {
 
 .re-ic{
   width: 15px;
-  margin-right: 0;
+  margin-right: 10px;
   display: block;
   font-size: 20px;
   margin: auto;
+  float: left;
+  margin-top: 2px;
 }
 .footer-sidelist{
   bottom: 0;
@@ -744,7 +747,58 @@ padding-right: 5px!important;
 .text-right-res{
   text-align: right;
 }
-
+.home-menu .navbar-nav .nav-link {
+  padding-right: 1rem;
+  padding-left: 1rem;
+  font-size: 12px;
+  font-weight: bold;
+}
+.btn-menu .navbar-nav .nav-item {
+  margin-left: 10px;
+}
+.btn-menu {
+  display: inline-block;
+  padding-top: 0.8rem;
+}
+.bg-home-banner{
+  background-image: url(/assets/img/bg-homebanner.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+}
+.bg-home-screen{
+  background-image: url(/assets/img/bg-homescreen.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+}
+.bg-gameclass{
+  background-image: url(/assets/img/bg-gameclass.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+}
+.font-w-100{
+  font-weight: 100!important;
+}
+.font-w-500{
+  font-weight: 500!important;
+}
+.font-w-600{
+  font-weight: 600!important;
+}
+.font-w-700{
+  font-weight: 700!important;
+}
+.font-w-800{
+  font-weight: 800!important;
+}
+.w-75{
+  width: 75%;
+}
+.radius-5{
+  border-radius: 5px;
+}
 @media (min-width: 320px) and (max-width: 480px){
   .text-right-res{
     text-align: left;
