--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -926,6 +926,12 @@ padding-right: 5px!important;
 .bg-inp-dark{
   background-color: rgba(45, 46, 45, 1)!important;
 }
+.min-width-100{
+  min-width: 100px;
+}
+.min-width-90 {
+  min-width: 90px;
+}
 
 @media (min-width: 320px) and (max-width: 480px){
   .text-right-res{
